# zconf

./: .gitignore  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: simple.rs
examples/libcosmic/: Cargo.toml
examples/libcosmic/src/: main.rs
src/: lib.rs  test.rs  watcher.rs
test_static/: test1.toml
