[package]
name = "zconf"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
repository = "https://github.com/wiiznokes/zconf"
keywords = ["config"]
description = """
help to write configuration files
"""

[features]
default = ["toml"]
toml = ["dep:toml"]
json = ["dep:serde_json"]


[dependencies]
serde = "1"
toml = { version = "0.8", optional = true }
serde_json = { version = "1", optional = true }
log = "0.4"
anyhow = "1"