[package]
name = "zconf"
version = "0.1.4-rc.2"
edition = "2024"
license = "MIT"
authors = ["wiiznokes <wiiznokes2@gmail.com>"]
repository = "https://github.com/wiiznokes/zconf"
keywords = ["config"]
description = """
help to write configuration files
"""

[features]
default = ["toml", "watcher"]
toml = ["dep:toml"]
json = ["dep:serde_json"]
watcher = ["dep:notify"]


[dependencies]
serde = "1"
toml = { version = "0.9", optional = true }
serde_json = { version = "1", optional = true }
log = "0.4"
anyhow = "1"
atomicwrites = "0.4"
notify = { version = "8", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true